BudgetView: Fix spacing on add budget scenario modal

--- a/app/budget/directives/modals/addBudgetScenario/addBudgetScenario.css
+++ b/app/budget/directives/modals/addBudgetScenario/addBudgetScenario.css
@@ -1,3 +1,7 @@
+.add-budget-scenario {
+	padding-top: 15px;
+}
+
 .add-budget-scenario__dropdown {
 	width: 100% !important;
 	background: #fff;
